@@ -6,6 +6,8 @@ Changelog for LedgerSMB 1.3.3
 * Fix for being unable to delete AR/AP drafts (Herman V)
 * Additional button cleanup (Herman V)
 * Fix for is_zero issue with latest Math::BigFloat in AR/AP trans (Chris T)
+* Fix for inability to save employee country (Chris T)
+* API inconsistency fixed (Chris T)
 
 Changelog for LedgerSMB 1.3.2
 * Fixed a few files where suExec fixes were not applied (Chris T)
